@@ -661,6 +661,8 @@
   <string name="subtitle_print_label_per_purchase">Per purchase</string>
   <!-- Short form for "One label per unit" -->
   <string name="subtitle_print_label_per_unit">Per unit</string>
+  <!-- %1$s is a price and %2$s is a currency -->
+  <string name="subtitle_total_price">Total price: %1$s %2$s</string>
 
   <string name="description_input_product_part1">Product field contains:</string>
   <string name="description_input_product_part2">Please choose how to proceed:</string>
