@@ -11,6 +11,7 @@
 - Improved: Fulfillment check for every ingredient on recipe page
 - Improved: On recipe page ingredients now can be added to shopping list with exclude option (#632)
 - Improved: App now supports disabled stock feature and hides stock parts, same with recipes (#647)
+- Improved: Total price displayed on shopping list bottom (#645)
 - Fixed: Recipe actions throwing errors (thanks @timhae!) (#646)
 - Fixed: Simultaneous display of recipe photos and placeholder images
 - Fixed: Behavior option "reduce app startup time" not working on Android 12+
